--- a/client/src/pages/MyUnits/UnitsTable/UnitTableRow/OptionsCell/index.module.css
+++ b/client/src/pages/MyUnits/UnitsTable/UnitTableRow/OptionsCell/index.module.css
@@ -27,3 +27,15 @@
 .dropdownContent p:hover {
   background-color: #ddd;
 }
+
+.dropdownContent a {
+  color: black;
+  padding: 0.2rem 1rem;
+  text-decoration: none;
+  display: block;
+  cursor: pointer;
+}
+
+.dropdownContent a:hover {
+  background-color: #ddd;
+}
