--- a/client/src/pages/UnitDetails/UnitForm/index.module.css
+++ b/client/src/pages/UnitDetails/UnitForm/index.module.css
@@ -4,3 +4,11 @@
   width: 100%;
   row-gap: 1rem;
 }
+
+.buttons {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  column-gap: 1rem;
+}
