--- a/client/src/pages/UnitDetails/CompartmentsList/index.module.css
+++ b/client/src/pages/UnitDetails/CompartmentsList/index.module.css
@@ -2,10 +2,18 @@
   display: flex;
   flex-direction: column;
   width: 60%;
+  row-gap: 0.5rem;
 }
 
 @media screen and (max-width: 768px) {
   .list {
     width: 100%;
   }
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  margin: 1rem 0;
 }
